syntax = "proto3";
   
message ObjectiveMeta {
    string objective = 1;
    repeated double param = 2;
}

message CriterionMeta {
    string criterion_method = 1;
    repeated double criterion_param = 2;
}

message DecisionTreeModelMeta {
    CriterionMeta criterion_meta = 1;
    int32 max_depth = 2;
    int32 min_sample_split = 3;
    double min_impurity_split = 4;
    int32 min_leaf_node = 5;
}

message QuantileMeta {
    string quantile_method = 1;
    int32 bin_num = 2;
    double bin_gap = 3;
    int32 bin_sample_num = 4;
}

message BoostingTreeModelMeta {
    DecisionTreeModelMeta tree_meta = 1;
    double learning_rate = 2;
    int32 num_trees = 3;
    QuantileMeta quantile_meta = 4;
    ObjectiveMeta objective_meta = 5;
    string task_type = 6;
    int32 tree_dim = 7;
    bool n_iter_no_change = 8;
    double tol = 9;
    int32 num_classes = 10;
    repeated string classes_ = 11;
}

